--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<testng.version>6.8</testng.version>
 		<hamcrest.version>1.3</hamcrest.version>
+		<guice.version>3.0</guice.version>
 	</properties>
 
 	<dependencies>
@@ -41,6 +42,11 @@
 			<artifactId>hamcrest-library</artifactId>
 			<version>${hamcrest.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>${guice.version}</version>
 		</dependency>
 	</dependencies>
 	<modules>
