Add support for attributes and permissions
- creation date

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<testng.version>6.8</testng.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<guice.version>3.0</guice.version>
+		<joda-time.version>2.2</joda-time.version>
 	</properties>
 
 	<dependencies>
@@ -47,6 +48,11 @@
 			<groupId>com.google.inject</groupId>
 			<artifactId>guice</artifactId>
 			<version>${guice.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>${joda-time.version}</version>
 		</dependency>
 	</dependencies>
 	<modules>
