Fix mapping issue

--- a/es-dms-service/src/main/resources/com/github/richardwilly98/services/document-mapping.json
+++ b/es-dms-service/src/main/resources/com/github/richardwilly98/services/document-mapping.json
@@ -11,7 +11,15 @@
 				}
 			},
 			"attributes" : {
-				"creation": "date"
+				"type": "object",
+				"properties": {
+					"creation": {
+						"type": "date"
+					},
+					"author": {
+						"type": "string"
+					}
+				}
 			}
 		}
 	}
