--- a/es-dms-site/src/main/resources/shiro.ini
+++ b/es-dms-site/src/main/resources/shiro.ini
@@ -6,14 +6,19 @@
 # cm.storedCredentialsHexEncoded = false
 # iniRealm.credentialsMatcher = $cm
 
-[users]
-admin = secret, admin
-richard = richard, writer
-danilo = danilo, reader
+# myRealmCredentialsMatcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
+esRealm = com.github.richardwilly98.shiro.realm.EsRealm
+# esRealm.credentialsMatcher = $myRealmCredentialsMatcher
+securityManager.realms = $esRealm
 
-[roles]
+# [users]
+# admin = secret, admin
+# richard = richard, writer
+# danilo = danilo, reader
+
+# [roles]
 # 'admin' role has all permissions, indicated by the wildcard '*'
-admin = *
-writer = *
-reader = *
+# admin = *
+# writer = *
+# reader = *
 
