--- a/es-dms-site/src/main/webapp/WEB-INF/web.xml
+++ b/es-dms-site/src/main/webapp/WEB-INF/web.xml
@@ -4,39 +4,19 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	<display-name>Restful Web Application</display-name>
 
-	<servlet>
-		<servlet-name>es-dms-site</servlet-name>
-		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-		<init-param>
-			<param-name>com.sun.jersey.config.property.packages</param-name>
-			<param-value>com.github.richardwilly98.rest</param-value>
-		</init-param>
-		<init-param>
-			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
-			<param-value>true</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-
-	<listener>
-    	<listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
-	</listener>
-	
-	<filter>
-		<filter-name>shiro-filter</filter-name>
-		<filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class>
-	</filter>
-
-	<filter-mapping>
-		<filter-name>shiro-filter</filter-name>
-		<url-pattern>/api/*</url-pattern>
-	</filter-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>es-dms-site</servlet-name>
-		<url-pattern>/api/*</url-pattern>
-	</servlet-mapping>
-
+	<!-- set up Google Guice Servlet integration -->
+    <filter>
+        <filter-name>guiceFilter</filter-name>
+        <filter-class>com.google.inject.servlet.GuiceFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>guiceFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <listener>
+        <listener-class>com.github.richardwilly98.web.RestGuiceServletConfig</listener-class>
+    </listener>
+    
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
