--- a/es-dms-site/src/main/webapp/WEB-INF/web.xml
+++ b/es-dms-site/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app id="WebApp_ID" version="2.5"
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-	<display-name>Restful Web Application</display-name>
+	<display-name>ElasticSearch Dms Client</display-name>
 
 	<!-- set up Google Guice Servlet integration -->
     <filter>
