--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<hamcrest.version>1.3</hamcrest.version>
 		<guice.version>3.0</guice.version>
 		<joda-time.version>2.2</joda-time.version>
+		<commons-logging.version>1.1.2</commons-logging.version>
 	</properties>
 
 	<dependencies>
@@ -53,6 +54,11 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>${joda-time.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>${commons-logging.version}</version>
 		</dependency>
 	</dependencies>
 	<modules>
