--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
 		<guice.version>3.0</guice.version>
 		<joda-time.version>2.2</joda-time.version>
 		<commons-logging.version>1.1.2</commons-logging.version>
+		<elasticsearch.version>0.90.0</elasticsearch.version>
+		<guava.version>13.0.1</guava.version>
+		<slf4j.version>1.7.5</slf4j.version>
 	</properties>
 
 	<dependencies>
@@ -59,6 +62,16 @@
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>${commons-logging.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
 		</dependency>
 	</dependencies>
 	<modules>
