Include filtering in test resources.

--- a/es-dms-service/pom.xml
+++ b/es-dms-service/pom.xml
@@ -48,6 +48,7 @@
 		<testResources>
 			<testResource>
 				<directory>${basedir}/src/test/resources</directory>
+				<filtering>true</filtering> 
 				<includes>
 					<include>**/*.*</include>
 				</includes>
