--- a/es-dms-site/pom.xml
+++ b/es-dms-site/pom.xml
@@ -131,6 +131,7 @@
 		<testResources>
 			<testResource>
 				<directory>${basedir}/src/test/resources</directory>
+				<filtering>true</filtering>
 				<includes>
 					<include>**/*.*</include>
 				</includes>
