--- a/es-dms-site/pom.xml
+++ b/es-dms-site/pom.xml
@@ -105,6 +105,24 @@
 			<version>${jersey.version}</version>
 			<scope>test</scope>
 		</dependency>
+        <!-- Jetty -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+            <version>${jetty.version}</version>
+			<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+            <version>${jetty.version}</version>
+			<scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.4</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<finalName>es-dms-site</finalName>
