--- a/es-dms-site/pom.xml
+++ b/es-dms-site/pom.xml
@@ -15,7 +15,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jersey.version>1.17.1</jersey.version>
-		<jackson.version>2.1.4</jackson.version>
+		<jackson.version>2.2.1</jackson.version>
 		<commons.io.version>2.4</commons.io.version>
 		<shiro.version>1.2.1</shiro.version>
 		<jetty.version>8.1.0.RC4</jetty.version>
@@ -36,7 +36,7 @@
 			<artifactId>jersey-servlet</artifactId>
 			<version>${jersey.version}</version>
 		</dependency>
-		<dependency>
+		 <dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-json</artifactId>
 			<version>${jersey.version}</version>
@@ -44,6 +44,11 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.jaxrs</groupId>
+			<artifactId>jackson-jaxrs-json-provider</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
