Fix warning during compilation

--- a/es-dms-core/pom.xml
+++ b/es-dms-core/pom.xml
@@ -22,4 +22,17 @@
 			<version>${jackson.version}</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<testResources>
+			<testResource>
+				<directory>${basedir}/src/test/resources</directory>
+				<filtering>true</filtering> 
+				<includes>
+					<include>**/*.*</include>
+				</includes>
+			</testResource>
+		</testResources>
+	</build>
+
 </project>
