--- a/es-dms-site/src/main/webapp/WEB-INF/web.xml
+++ b/es-dms-site/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <listener>
-        <listener-class>com.github.richardwilly98.web.RestGuiceServletConfig</listener-class>
+        <listener-class>com.github.richardwilly98.esdms.web.RestGuiceServletConfig</listener-class>
     </listener>
     
 	<welcome-file-list>
