--- a/es-dms-service/pom.xml
+++ b/es-dms-service/pom.xml
@@ -42,13 +42,19 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-core</artifactId>
+			<version>1.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<testResources>
 			<testResource>
 				<directory>${basedir}/src/test/resources</directory>
-				<filtering>true</filtering> 
+				<filtering>true</filtering>
 				<includes>
 					<include>**/*.*</include>
 				</includes>
