--- a/es-dms-service/pom.xml
+++ b/es-dms-service/pom.xml
@@ -51,6 +51,32 @@
 	</dependencies>
 
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>1.5</version>
+				<configuration>
+					<licenseName>gpl-v3-license</licenseName>
+					<licenseResolver>${project.baseUri}/src/license</licenseResolver>
+					<roots>
+						<root>src/main/java</root>
+					</roots>
+					<excludes>
+						<exclude>**/*.json</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>first</id>
+						<goals>
+							<goal>update-file-header</goal>
+						</goals>
+						<phase>process-sources</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 		<testResources>
 			<testResource>
 				<directory>${basedir}/src/test/resources</directory>
