--- a/es-dms-site/pom.xml
+++ b/es-dms-site/pom.xml
@@ -36,7 +36,7 @@
 			<artifactId>jersey-servlet</artifactId>
 			<version>${jersey.version}</version>
 		</dependency>
-		 <dependency>
+		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-json</artifactId>
 			<version>${jersey.version}</version>
@@ -155,6 +155,28 @@
 					<keystoreFile>${basedir}/.keystore</keystoreFile>
 					<keystorePass>secret</keystorePass>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>1.5</version>
+				<configuration>
+					<verbose>true</verbose>
+					<licenseName>gpl-v3-license</licenseName>
+					<licenseResolver>${project.baseUri}/src/license</licenseResolver>
+					<roots>
+						<root>src/main/java</root>
+					</roots>
+				</configuration>
+				<executions>
+					<execution>
+						<id>first</id>
+						<goals>
+							<goal>update-file-header</goal>
+						</goals>
+						<phase>process-sources</phase>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 		<testResources>
