--- a/es-dms-site/pom.xml
+++ b/es-dms-site/pom.xml
@@ -151,9 +151,9 @@
 				<version>2.0</version>
 				<configuration>
 					<path>/${project.build.finalName}</path>
-					<httpsPort>8443</httpsPort>
+					<!-- <httpsPort>8443</httpsPort>
 					<keystoreFile>${basedir}/.keystore</keystoreFile>
-					<keystorePass>secret</keystorePass>
+					<keystorePass>secret</keystorePass> -->
 				</configuration>
 			</plugin>
 			<plugin>
