--- a/es-dms-site/yo/package.json
+++ b/es-dms-site/yo/package.json
@@ -2,7 +2,6 @@
   "name": "es-dms-site",
   "version": "0.0.0",
   "dependencies": {
-    "grunt-karma": "~0.4.5"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -20,7 +19,7 @@
     "grunt-contrib-watch": "~0.4.0",
     "grunt-usemin": "~0.1.11",
     "grunt-rev": "~0.1.0",
-    "grunt-karma": "~0.4.3",
+    "grunt-karma": "~0.4.5",
     "grunt-open": "~0.2.0",
     "grunt-concurrent": "~0.3.0",
     "matchdep": "~0.1.2",
@@ -29,7 +28,9 @@
     "grunt-ngmin": "~0.0.2",
     "grunt-connect-proxy": "~0.1.4",
     "phantomjs": "~1.9.1-0",
-    "grunt-env": "~0.4.0"
+    "grunt-env": "~0.4.0",
+    "bower": "~0.10.0",
+    "yo": "~1.0.0-rc.1.1"
   },
   "engines": {
     "node": ">=0.8.0"
