--- a/es-dms-site/pom.xml
+++ b/es-dms-site/pom.xml
@@ -20,6 +20,29 @@
 		<shiro.version>1.2.1</shiro.version>
 		<jetty.version>8.1.0.RC4</jetty.version>
 	</properties>
+	<profiles>
+		<profile>
+			<id>grunt</id>
+			<build>
+				<plugins>
+					<!-- Declare the maven yeoman plugin to launch npm, grunt and bower 
+						during the build -->
+					<plugin>
+						<groupId>com.github.trecloux</groupId>
+						<artifactId>yeoman-maven-plugin</artifactId>
+						<version>0.1</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>build</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 	<dependencies>
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
@@ -138,20 +161,6 @@
 			</resource>
 		</resources>
 		<plugins>
-			<!-- Declare the maven yeoman plugin to launch npm, grunt and bower during 
-				the build -->
-			<plugin>
-				<groupId>com.github.trecloux</groupId>
-				<artifactId>yeoman-maven-plugin</artifactId>
-				<version>0.1</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>build</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
