--- a/es-dms-site/pom.xml
+++ b/es-dms-site/pom.xml
@@ -39,6 +39,18 @@
 							</execution>
 						</executions>
 					</plugin>
+					<plugin>
+						<artifactId>maven-war-plugin</artifactId>
+						<version>2.1.1</version>
+						<configuration>
+							<packagingExcludes>WEB-INF/web.xml</packagingExcludes>
+							<webResources>
+								<resource>
+									<directory>yo/dist</directory>
+								</resource>
+							</webResources>
+						</configuration>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
@@ -166,11 +178,6 @@
 				<version>2.1.1</version>
 				<configuration>
 					<packagingExcludes>WEB-INF/web.xml</packagingExcludes>
-					<webResources>
-						<resource>
-							<directory>yo/dist</directory>
-						</resource>
-					</webResources>
 				</configuration>
 			</plugin>
 			<!-- Configure the clean plugin in order to delete generated directories -->
