--- a/es-dms-site/yo/bower.json
+++ b/es-dms-site/yo/bower.json
@@ -15,7 +15,8 @@
     "angular-authentication": "~1.0.4",
     "angular-bootstrap": "~0.4.0",
     "blueimp-file-upload": "~8.4.3",
-    "angular-ui": "~0.4.0"
+    "angular-ui": "~0.4.0",
+    "angular-ui-router": "~0.0.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
