--- a/es-dms-site/yo/bower.json
+++ b/es-dms-site/yo/bower.json
@@ -16,7 +16,8 @@
     "angular-bootstrap": "~0.4.0",
     "blueimp-file-upload": "~8.4.3",
     "angular-ui": "~0.4.0",
-    "angular-ui-router": "~0.0.1"
+    "angular-ui-router": "~0.0.1",
+    "angular-ui-select2": "~0.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
