--- a/es-dms-site/yo/package.json
+++ b/es-dms-site/yo/package.json
@@ -1,8 +1,7 @@
 {
   "name": "es-dms-site",
   "version": "0.0.0",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
