--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<guava.version>13.0.1</guava.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<mycila.version>2.9.ga</mycila.version>
+		<jackson.version>2.2.2</jackson.version>
 	</properties>
 
 	<dependencies>
