--- a/es-dms-site/pom.xml
+++ b/es-dms-site/pom.xml
@@ -83,12 +83,8 @@
 			<artifactId>jersey-container-servlet</artifactId>
 			<version>${jersey.version}</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.glassfish.jersey.media</groupId>
-			<artifactId>jersey-media-json-jackson</artifactId>
-			<version>${jersey.version}</version>
-		</dependency>
-		 -->
+		<!-- <dependency> <groupId>org.glassfish.jersey.media</groupId> <artifactId>jersey-media-json-jackson</artifactId> 
+			<version>${jersey.version}</version> </dependency> -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
@@ -141,14 +137,8 @@
 			<artifactId>guice-bridge</artifactId>
 			<version>${hk2.version}</version>
 		</dependency>
-		<!--  
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
-		</dependency>
-		-->
+		<!-- <dependency> <groupId>javax.servlet</groupId> <artifactId>servlet-api</artifactId> 
+			<version>2.5</version> <scope>provided</scope> </dependency> -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -212,6 +202,13 @@
 				<version>2.5</version>
 				<configuration>
 					<filesets>
+						<fileset>
+							<directory>target</directory>
+							<excludes>
+								<exclude>plugins/**/*</exclude>
+							</excludes>
+							<followSymlinks>false</followSymlinks>
+						</fileset>
 						<fileset>
 							<directory>yo/dist</directory>
 						</fileset>
