Add tabs in document details #39
- 3 tabs: details, version (currently disabled), audit.

--- a/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/document-mapping.json
+++ b/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/document-mapping.json
@@ -33,6 +33,9 @@
 			"attributes" : {
 				"type": "object",
 				"properties": {
+					"modified": {
+						"type": "date"
+					},
 					"creation": {
 						"type": "date"
 					},
