--- a/es-dms-site/yo/bower.json
+++ b/es-dms-site/yo/bower.json
@@ -2,25 +2,25 @@
   "name": "esDmsSite",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.0.7",
+    "angular": "~1.2.0-rc.2",
     "json3": "~3.2.4",
-    "jquery": "~1.9.1",
-    "bootstrap-sass": "~2.3.1",
-    "es5-shim": "~2.0.8",
-    "angular-resource": "~1.0.7",
-    "angular-cookies": "~1.0.7",
-    "angular-sanitize": "~1.0.7",
+    "jquery": "~2.0.3",
+    "bootstrap-sass": "~3.0.0",
+    "es5-shim": "~2.1.0",
+    "angular-resource": "~1.2.0-rc.2",
+    "angular-cookies": "~1.2.0-rc.2",
+    "angular-sanitize": "~1.2.0-rc.2",
     "angular-http-auth": "git://github.com/qloo/angular-http-auth.git",
-    "lodash": "1.3.1",
     "angular-authentication": "~1.0.4",
-    "angular-bootstrap": "~0.4.0",
-    "blueimp-file-upload": "~8.4.3",
+    "angular-bootstrap": "~0.6.0",
+    "blueimp-file-upload": "~8.8.5",
     "angular-ui": "~0.4.0",
-    "angular-ui-router": "~0.0.1",
-    "angular-ui-select2": "~0.0.2"
+    "angular-ui-router": "~0.2.0",
+    "angular-ui-select2": "~0.0.2",
+    "lodash": "~2.1.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.0.7",
-    "angular-scenario": "~1.0.7"
+    "angular-mocks": "~1.2.0-rc.2",
+    "angular-scenario": "~1.2.0-rc.2"
   }
 }
