Add custom Eclipse Code Formatter

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ local.properties
 .classpath
 .settings/
 .loadpath
+!/.settings/org.eclipse.core.resources.prefs
+!/.settings/org.eclipse.jdt.core.prefs
+!/.settings/org.eclipse.jdt.ui.prefs
 
 # External tool builders
 .externalToolBuilders/
