Add ratings mapping

--- a/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/document-mapping.json
+++ b/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/document-mapping.json
@@ -47,6 +47,21 @@
 			"tags" : {
 				"type" : "string", 
 				"index_name" : "tag"
+			},
+			"ratings" : {
+				"type" : "object",
+				"properties": {
+					"date": {
+						"type": "date"
+					},
+					"user": {
+						"type": "string"
+					},
+					"score": {
+						"type": "integer"
+					}
+				}, 
+				"index_name" : "rating"
 			}
 		}
 	}
