--- a/activiti/es-dms-activiti-rest-client/pom.xml
+++ b/activiti/es-dms-activiti-rest-client/pom.xml
@@ -5,6 +5,7 @@
 		<groupId>com.github.richardwilly98</groupId>
 		<artifactId>es-dms</artifactId>
 		<version>1.0-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>es-dms-activiti-rest-client</artifactId>
 	<name>es-dms-activiti-rest-client</name>
