--- a/es-dms-rest-client/pom.xml
+++ b/es-dms-rest-client/pom.xml
@@ -41,6 +41,18 @@
 			<version>${jackson.version}</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven.surefire.version}</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<repositories>
 		<repository>
 			<id>Alfresco Maven Repository</id>
