Add the option to run ed-dms-site embedded tomcat
- Run es-dms\es-dms-site\mvn package tomcat7:run-war-only -Pgrunt
- Open browser https://localhost:8443

--- a/es-dms-site/pom.xml
+++ b/es-dms-site/pom.xml
@@ -232,6 +232,20 @@
 					<!-- <httpsPort>8443</httpsPort> <keystoreFile>${basedir}/.keystore</keystoreFile> 
 						<keystorePass>secret</keystorePass> -->
 				</configuration>
+				<executions>
+					<execution>
+						<id>default-cli</id>
+						<goals>
+							<goal>run-war-only</goal>
+						</goals>
+							<configuration>
+								<httpsPort>8443</httpsPort>
+								<keystoreFile>${basedir}/.keystore</keystoreFile>
+								<keystorePass>secret</keystorePass>
+								<contextFile>${basedir}/src/test/resources/tomcat-context.xml</contextFile>
+							</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
