--- a/es-dms-site/pom.xml
+++ b/es-dms-site/pom.xml
@@ -239,10 +239,13 @@
 							<goal>run-war-only</goal>
 						</goals>
 							<configuration>
+								<port>8080</port>
+								<!--
 								<httpsPort>8443</httpsPort>
 								<keystoreFile>${basedir}/.keystore</keystoreFile>
 								<keystorePass>secret</keystorePass>
 								<contextFile>${basedir}/src/test/resources/tomcat-context.xml</contextFile>
+								-->
 							</configuration>
 					</execution>
 				</executions>
