Exclude some directorie from yo to be deleted
- mvn clean will not delete yo/node_modules and yo/app/bower_components

--- a/es-dms-site/pom.xml
+++ b/es-dms-site/pom.xml
@@ -214,12 +214,20 @@
 						<fileset>
 							<directory>yo/.tmp</directory>
 						</fileset>
+						<!--
 						<fileset>
-							<directory>yo/app/components</directory>
+							<directory>yo/app/bower_components</directory>
+							<excludes>
+								<exclude>**/*</exclude>
+							</excludes>
 						</fileset>
 						<fileset>
 							<directory>yo/node_modules</directory>
+							<excludes>
+								<exclude>**/*</exclude>
+							</excludes>
 						</fileset>
+					-->
 					</filesets>
 				</configuration>
 			</plugin>
