new es-dms-rest-client and es-dms-rest-server

--- a/es-dms-rest-client/pom.xml
+++ b/es-dms-rest-client/pom.xml
@@ -17,6 +17,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.github.richardwilly98</groupId>
+			<artifactId>test-es-dms-rest-server</artifactId>
+			<version>${project.parent.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.richardwilly98</groupId>
 			<artifactId>es-dms-core</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
