--- a/test/test-es-dms-rest-server/pom.xml
+++ b/test/test-es-dms-rest-server/pom.xml
@@ -20,6 +20,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>${testng.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.github.richardwilly98</groupId>
 			<artifactId>es-dms-rest-server</artifactId>
 			<version>${project.parent.version}</version>
