--- a/activiti/es-dms-activiti-authentication/pom.xml
+++ b/activiti/es-dms-activiti-authentication/pom.xml
@@ -17,6 +17,7 @@
 		<jersey.version>2.2</jersey.version>
 		<jackson.version>2.2.2</jackson.version>
 		<h2.version>1.3.170</h2.version>
+		<surefire.version>2.13</surefire.version>
 	</properties>
 	<dependencies>
 
@@ -29,6 +30,12 @@
 			<groupId>com.github.richardwilly98</groupId>
 			<artifactId>es-dms-core</artifactId>
 			<version>${project.parent.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.richardwilly98</groupId>
+			<artifactId>test-es-dms-rest-server</artifactId>
+			<version>${project.parent.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.activiti</groupId>
@@ -90,16 +97,16 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven.surefire.version}</version>
-				<configuration>
-					<skipTests>true</skipTests>
-				</configuration>
-			</plugin>
-		</plugins>
+		<testResources>
+			<testResource>
+				<directory>${basedir}/src/test/resources</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>**/*.*</include>
+				</includes>
+			</testResource>
+		</testResources>
+
 	</build>
 	<repositories>
 		<repository>
