--- a/activiti/test-es-dms-activiti-integration/pom.xml
+++ b/activiti/test-es-dms-activiti-integration/pom.xml
@@ -7,8 +7,8 @@
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
-	<artifactId>es-dms-activiti-authentication</artifactId>
-	<name>es-dms-activiti-authentication</name>
+	<artifactId>test-es-dms-activiti-integration</artifactId>
+	<name>test-es-dms-activiti-integration</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,9 +18,19 @@
 		<jackson.version>2.2.2</jackson.version>
 		<h2.version>1.3.170</h2.version>
 		<surefire.version>2.13</surefire.version>
+		<testng.version>6.8</testng.version>
 	</properties>
 	<dependencies>
-
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>${testng.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.richardwilly98</groupId>
+			<artifactId>test-es-dms-rest-server</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>com.github.richardwilly98</groupId>
 			<artifactId>es-dms-rest-client</artifactId>
@@ -32,18 +42,6 @@
 			<version>${project.parent.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.richardwilly98</groupId>
-			<artifactId>test-es-dms-rest-server</artifactId>
-			<version>${project.parent.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.github.richardwilly98</groupId>
-			<artifactId>test-es-dms-activiti-integration</artifactId>
-			<version>${project.parent.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-engine</artifactId>
 			<version>${activiti.version}</version>
@@ -52,13 +50,11 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>${h2.version}</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-spring</artifactId>
 			<version>${activiti.version}</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -79,7 +75,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
