--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,7 @@
 		<module>es-dms-site</module>
 		<module>test/test-es-dms-rest-server</module>
 		<module>es-dms-rest-client</module>
+		<module>activiti/test-es-dms-activiti-integration</module>
 		<module>activiti/es-dms-activiti-authentication</module>
 		<module>activiti/es-dms-activiti-rest-client</module>
 	</modules>
