--- a/activiti/es-dms-activiti-authentication/pom.xml
+++ b/activiti/es-dms-activiti-authentication/pom.xml
@@ -18,6 +18,7 @@
 		<jackson.version>2.2.2</jackson.version>
 		<h2.version>1.3.170</h2.version>
 		<surefire.version>2.13</surefire.version>
+		<jetty.version>8.1.0.RC4</jetty.version>
 	</properties>
 	<dependencies>
 
@@ -33,14 +34,28 @@
 		</dependency>
 		<dependency>
 			<groupId>com.github.richardwilly98</groupId>
-			<artifactId>test-es-dms-rest-server</artifactId>
+			<artifactId>es-dms-rest-server</artifactId>
 			<version>${project.parent.version}</version>
+			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.github.richardwilly98</groupId>
-			<artifactId>test-es-dms-activiti-integration</artifactId>
+			<artifactId>es-dms-rest-server</artifactId>
 			<version>${project.parent.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- Jetty -->
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlet</artifactId>
+			<version>${jetty.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-webapp</artifactId>
+			<version>${jetty.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -51,6 +66,11 @@
 		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-explorer</artifactId>
+			<version>${activiti.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.activiti</groupId>
+			<artifactId>activiti-rest</artifactId>
 			<version>${activiti.version}</version>
 		</dependency>
 		<dependency>
