es-dms-activiti-rest Initial implementation

--- a/activiti/es-dms-activiti-rest-client/pom.xml
+++ b/activiti/es-dms-activiti-rest-client/pom.xml
@@ -14,11 +14,18 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jersey.version>2.2</jersey.version>
 		<jackson.version>2.2.2</jackson.version>
+		<activiti.version>5.13</activiti.version>
+		<jetty.version>8.1.0.RC4</jetty.version>
 
 		<!-- Maven plugins versions -->
 		<maven.surefire.version>2.12.3</maven.surefire.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.activiti</groupId>
+			<artifactId>activiti-rest</artifactId>
+			<version>${activiti.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>com.github.richardwilly98</groupId>
 			<artifactId>es-dms-core</artifactId>
@@ -44,18 +51,56 @@
 			<artifactId>jackson-jaxrs-json-provider</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.richardwilly98</groupId>
+			<artifactId>es-dms-activiti-authentication</artifactId>
+			<version>${project.parent.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.richardwilly98</groupId>
+			<artifactId>es-dms-activiti-authentication</artifactId>
+			<version>${project.parent.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.richardwilly98</groupId>
+			<artifactId>es-dms-rest-server</artifactId>
+			<version>${project.parent.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.richardwilly98</groupId>
+			<artifactId>es-dms-rest-server</artifactId>
+			<version>${project.parent.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- Jetty -->
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlet</artifactId>
+			<version>${jetty.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-webapp</artifactId>
+			<version>${jetty.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven.surefire.version}</version>
-				<configuration>
-					<skipTests>true</skipTests>
-				</configuration>
-			</plugin>
-		</plugins>
+		<testResources>
+			<testResource>
+				<directory>${basedir}/src/test/resources</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>**/*.*</include>
+				</includes>
+			</testResource>
+		</testResources>
 	</build>
 	<repositories>
 		<repository>
