Implement language detection
- Update mapping
- Add new language property in File

--- a/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/document-mapping.json
+++ b/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/document-mapping.json
@@ -25,10 +25,32 @@
 							"file": {
 								"store": "yes",
 								"term_vector": "with_positions_offsets"
+							},
+							"title" : { 
+								"store" : "yes" 
+							},
+							"language" : { 
+								"store" : "yes" 
+							},
+							"author" : { 
+								"store" : "yes" 
+							},
+							"keywords" : { 
+								"store" : "yes" 
+							},
+							"date" : { 
+								"store" : "yes" 
+							},
+							"content_length" : { 
+								"store" : "yes" 
+							},
+							"content_type" : { 
+								"store" : "yes" 
 							}
 						}
 					}
-				}
+				},
+				"index_name" : "version"
 			},
 			"attributes" : {
 				"type": "object",
