Improve parameterService REST api

--- a/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/parameter-mapping.json
+++ b/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/parameter-mapping.json
@@ -2,13 +2,16 @@
 	"parameter": {
 		"properties": {
 				"id" : {
-					"type": "string"
+					"type": "string",
+					"index": "not_analyzed"
 				},
 				"name" : {
-					"type": "string"
+					"type": "string",
+					"index": "not_analyzed"
 				},
 				"type" : {
-					"type": "integer"
+					"type": "integer",
+					"index": "not_analyzed"
 				}
 			}
 		}
