--- a/es-dms-service/pom.xml
+++ b/es-dms-service/pom.xml
@@ -47,6 +47,11 @@
 			<version>1.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils-core</artifactId>
+			<version>1.8.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
