Fix search issue with attributes.status

--- a/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/document-mapping.json
+++ b/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/document-mapping.json
@@ -63,6 +63,10 @@
 					},
 					"author": {
 						"type": "string"
+					},
+					"status": {
+						"type": "string",
+						"index":"not_analyzed"
 					}
 				}
 			},
