Update document mapping
- tag is "not_analyzed"
- remove index_name for ratings

--- a/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/document-mapping.json
+++ b/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/document-mapping.json
@@ -71,7 +71,8 @@
 				}
 			},
 			"tags" : {
-				"type" : "string", 
+				"type" : "string",
+				"index":"not_analyzed", 
 				"index_name" : "tag"
 			},
 			"ratings" : {
@@ -86,8 +87,7 @@
 					"score": {
 						"type": "integer"
 					}
-				}, 
-				"index_name" : "rating"
+				}
 			}
 		}
 	}
