Update for langdetect and highlighting

--- a/es-dms-rest-server/src/test/resources/settings.yml
+++ b/es-dms-rest-server/src/test/resources/settings.yml
@@ -23,3 +23,4 @@ cluster:
 	
 plugins:
 	mapper-attachments: elasticsearch/elasticsearch-mapper-attachments/1.9.0
+	langdetect: http://bit.ly/1cmf8AL
