--- a/es-dms-service/src/test/resources/settings.yml
+++ b/es-dms-service/src/test/resources/settings.yml
@@ -22,4 +22,5 @@ cluster:
 	name: es-test-cluster
 	
 plugins:
-  mapper-attachments: elasticsearch/elasticsearch-mapper-attachments/1.9.0
+	mapper-attachments: elasticsearch/elasticsearch-mapper-attachments/1.9.0
+	langdetect: http://bit.ly/1cmf8AL
