Fix session management
- Update to shiro 1.2.2
- Default session timeout is now 30 minutes. It can be changed in es-dms
system parameter

--- a/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/document-mapping.json
+++ b/es-dms-service/src/main/resources/com/github/richardwilly98/esdms/services/document-mapping.json
@@ -43,27 +43,30 @@
                                             }
                                         }
                                     },
-            						"title" : { 
-        								"store" : "yes" 
-        							},
-        							"language" : { 
-        								"store" : "yes" 
-        							},
-        							"author" : { 
-        								"store" : "yes" 
-        							},
-        							"keywords" : { 
-        								"store" : "yes" 
-        							},
-        							"date" : { 
-        								"store" : "yes" 
-        							},
-        							"content_length" : { 
-        								"store" : "yes" 
-        							},
-        							"content_type" : { 
-        								"store" : "yes" 
-        							}
+									"name" : { 
+										"store" : "yes"
+									},
+									"title" : { 
+										"store" : "yes"
+									},
+									"language" : {
+										"store" : "yes"
+									},
+									"author" : {
+										"store" : "yes"
+									},
+									"keywords" : {
+										"store" : "yes"
+									},
+									"date" : {
+										"store" : "yes"
+									},
+									"content_length" : {
+										"store" : "yes"
+									},
+									"content_type" : {
+										"store" : "yes"
+									}
                                 }
 					        }
 						}
