--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 		<slf4j.version>1.7.5</slf4j.version>
 		<mycila.version>2.9.ga</mycila.version>
 		<jackson.version>2.2.2</jackson.version>
-		
+		<shiro.version>1.2.2</shiro.version>
 		<!-- Maven plugins versions -->
 		<maven.surefire.version>2.12.3</maven.surefire.version>
 	</properties>
